[gd_scene load_steps=11 format=3 uid="uid://byv8gp2peqrxk"]

[ext_resource type="Script" path="res://heroes/boris/boris.gd" id="1_3hpqk"]
[ext_resource type="Texture2D" uid="uid://c08ify6vkjskj" path="res://графика/герои/борис/борис.png" id="1_u8h22"]
[ext_resource type="Texture2D" uid="uid://c08ych1avv088" path="res://графика/спрайты/диологовое окно для двери.png" id="3_ii5bm"]
[ext_resource type="Texture2D" uid="uid://83mip7ywq1dk" path="res://графика/спрайты/диологовое окно2.png" id="4_o5uam"]
[ext_resource type="FontFile" uid="uid://b2axlha0pocfi" path="res://font/Hardpixel.OTF" id="5_tdgmy"]
[ext_resource type="Texture2D" uid="uid://nmqa2wytmksv" path="res://графика/спрайты/продолжение следует.jpg" id="6_yi5b2"]
[ext_resource type="Texture2D" uid="uid://c414vh3ejwl2k" path="res://графика/button/icons8-q-50.png" id="7_5st3g"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bwfuc"]
size = Vector2(1.81818, 0.727272)

[sub_resource type="SpriteFrames" id="SpriteFrames_2h7dt"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_u8h22")
}],
"loop": true,
"name": &"idel",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_fdl2g"]
radius = 87.0517

[node name="Boris" type="CharacterBody2D"]
script = ExtResource("1_3hpqk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-7.62939e-06, 67)
scale = Vector2(5.5, 5.5)
shape = SubResource("RectangleShape2D_bwfuc")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-7.62939e-06, -5.96046e-08)
scale = Vector2(5.5, 5.5)
sprite_frames = SubResource("SpriteFrames_2h7dt")
animation = &"idel"

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_fdl2g")

[node name="ДиологовоеОкноДляДвери" type="Sprite2D" parent="."]
visible = false
position = Vector2(-124, -25)
scale = Vector2(0.993333, 0.993333)
texture = ExtResource("3_ii5bm")

[node name="ДиологовоеОкно2" type="Sprite2D" parent="."]
visible = false
position = Vector2(-278, -158)
scale = Vector2(2.02151, 2.02151)
texture = ExtResource("4_o5uam")

[node name="Label" type="Label" parent="."]
offset_left = -470.0
offset_top = -233.0
offset_right = -85.0
offset_bottom = -81.0
theme_override_fonts/font = ExtResource("5_tdgmy")
theme_override_font_sizes/font_size = 20

[node name="DarkVuport" type="Sprite2D" parent="."]
visible = false
position = Vector2(-369, -95)
texture = ExtResource("6_yi5b2")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="q" type="TextureButton" parent="CanvasLayer"]
offset_left = 1034.0
offset_top = 500.0
offset_right = 1111.0
offset_bottom = 577.0
texture_normal = ExtResource("7_5st3g")
stretch_mode = 5

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="button_down" from="CanvasLayer/q" to="." method="_on_q_button_down"]
[connection signal="button_up" from="CanvasLayer/q" to="." method="_on_q_button_up"]
